added more data to L2TP client info
