# backend/internal/handler/vpn.go
@@ -396,30 +396,38 @@ func HandleGetL2TPClient(c echo.Context) error {
 	}
 
 	response := L2TPClientResponse{
-		ID:               l2tpClient.ID,
-		Name:             l2tpClient.Name,
-		Disabled:         l2tpClient.Disabled,
-		Running:          l2tpClient.Running,
-		MaxMTU:           l2tpClient.MaxMTU,
-		MaxMRU:           l2tpClient.MaxMRU,
-		MRRU:             l2tpClient.MRRU,
-		ConnectTo:        l2tpClient.ConnectTo,
-		User:             l2tpClient.User,
-		Password:         l2tpClient.Password,
-		Profile:          l2tpClient.Profile,
-		KeepaliveTimeout: l2tpClient.KeepaliveTimeout,
-		UsePeerDNS:       l2tpClient.UsePeerDNS,
-		UseIPsec:         l2tpClient.UseIPsec,
-		IPsecSecret:      l2tpClient.IPsecSecret,
-		AllowFastPath:    l2tpClient.AllowFastPath,
-		AddDefaultRoute:  l2tpClient.AddDefaultRoute,
-		DialOnDemand:     l2tpClient.DialOnDemand,
-		Allow:            l2tpClient.Allow,
-		RandomSourcePort: l2tpClient.RandomSourcePort,
-		L2TPProtoVersion: l2tpClient.L2TPProtoVersion,
-		L2TPv3DigestHash: l2tpClient.L2TPv3DigestHash,
-		AddRoutes:        l2tpClient.AddRoutes,
-		Comment:          l2tpClient.Comment,
+		ID:                l2tpClient.ID,
+		Name:              l2tpClient.Name,
+		Disabled:          l2tpClient.Disabled,
+		Running:           l2tpClient.Running,
+		MaxMTU:            l2tpClient.MaxMTU,
+		MaxMRU:            l2tpClient.MaxMRU,
+		MRRU:              l2tpClient.MRRU,
+		ConnectTo:         l2tpClient.ConnectTo,
+		User:              l2tpClient.User,
+		Password:          l2tpClient.Password,
+		Profile:           l2tpClient.Profile,
+		KeepaliveTimeout:  l2tpClient.KeepaliveTimeout,
+		UsePeerDNS:        l2tpClient.UsePeerDNS,
+		UseIPsec:          l2tpClient.UseIPsec,
+		IPsecSecret:       l2tpClient.IPsecSecret,
+		AllowFastPath:     l2tpClient.AllowFastPath,
+		AddDefaultRoute:   l2tpClient.AddDefaultRoute,
+		DialOnDemand:      l2tpClient.DialOnDemand,
+		Allow:             l2tpClient.Allow,
+		RandomSourcePort:  l2tpClient.RandomSourcePort,
+		L2TPProtoVersion:  l2tpClient.L2TPProtoVersion,
+		L2TPv3DigestHash:  l2tpClient.L2TPv3DigestHash,
+		AddRoutes:         l2tpClient.AddRoutes,
+		Comment:           l2tpClient.Comment,
+		Status:            l2tpClient.Status,
+		Uptime:            l2tpClient.Uptime,
+		Encoding:          l2tpClient.Encoding,
+		MTU:               l2tpClient.MTU,
+		LocalAddress:      l2tpClient.LocalAddress,
+		RemoteAddress:     l2tpClient.RemoteAddress,
+		LocalIPv6Address:  l2tpClient.LocalIPv6Address,
+		RemoteIPv6Address: l2tpClient.RemoteIPv6Address,
 	}
 
 	return SuccessResponse(c, http.StatusOK, "L2TP client details retrieved successfully", response)
